Bug 30952: Fix patroninfo-section alignment

--- a/koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
+++ b/koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
@@ -1330,7 +1330,7 @@ dd {
 
 .patroninfo-section {
     padding: .5em;
-    margin: .5em;
+    margin: .5em 0;
     @include card;
 }
 
